--- a/PuppyLove/app/src/main/AndroidManifest.xml
+++ b/PuppyLove/app/src/main/AndroidManifest.xml
@@ -9,16 +9,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PuppyLove">
+        <activity android:name=".ForgotPasswordActivity"></activity>
+        <activity android:name=".CreateAccountActivity" />
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.PuppyLove.NoActionBar">
+            android:name=".LoginActivity"
+            android:label="Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.PuppyLove.NoActionBar" />
     </application>
 
 </manifest>
